--- a/public/css/app.css
+++ b/public/css/app.css
@@ -168,17 +168,21 @@ hr {
 
 .left-navbar{
   
-  width: 258px;
+  width: 230px;
   font-weight: bold;
-  color: rgba(235, 235, 235);
+  color: black;
   font-family: 'Poppins', sans-serif;
-  border: solid 1px whitesmoke;
+  border: solid 1px black;
+  border-radius: 10px;
   padding-left: unset;
-  padding-left: 8px;
+  padding-left: 12px;
   padding-right: unset;
-  padding-bottom: 3px;
+  padding-bottom: 6px;
   text-align: center;
-  background-color: rgba(74, 46, 59,0.8);
+  background-color: var(--yellow);
+}
+.left-navbar:hover{
+  background-color: rgba(237, 230, 211,0.5)
 }
 
 #todosLosP{
@@ -475,6 +479,14 @@ margin-right: 0px;
 }
 .user{
   color: #4a2e3b;
+  padding-top: 2px;
+}
+.icono-usuario-comentario{
+  display: block;
+  font-size: 20px;
+  margin-left: 2px;
+  padding-left: 10px;
+  padding-top: 1px;
 }
 
 .buy-now-button {
@@ -822,12 +834,7 @@ textarea.form-input {
 .col-2{
 max-width: 70px;
 }
-.icono-usuario-comentario{
-  display: block;
-  font-size: 30px;
-  margin-left: 5px;
-  padding-left: 10px;
-}
+
 .form-registracion{
   display: grid;
   width: 98%;
