--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,7 +27,7 @@
 
         <nav class="main-navbar">
             <ul class="left-navbar">
-                <li><a href="/allProducts/:id"></a>Todos los productos</li>
+                <li><a href="/allProducts/:id">Todos los productos</a></li>
                 <!-- solo logueado <li><a href="">Cargar productos</a></li> -->
             </ul>
 
