--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -45,7 +45,7 @@
 			</button>
 	
 			<nav class="main-navbar">
-				<ul class="left-navbar">
+				<ul class="left-navbar2">
 					<li class="log"><a href="/">Restaurantes</a></li>
 					<li class="log"><a href="/add">Añadir restaurante</a></li>
 				</ul>
