arreglo descripcion producto en detalle

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -29,7 +29,7 @@
 			<div class="row">
 				<article class="col-12 col-lg-8 product-detail-info">
 					<img src="<%= productos[idSearch-1].imagen %> " alt="" class="product-detail-img">
-					<p class="product-detail-description"> <%= productos[idSearch].descripcion %>  </p>
+					<p class="product-detail-description"> <%= productos[idSearch-1].descripcion %>  </p>
 				</article>
 
 				<div class="col-12 col-lg-4">
