--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -43,23 +43,30 @@
 			<div class="col-12">
 				<h2 class="products-title">Restaurantes favoritos</h2>
 			</div>
+			
+			
 			<!-- Show mis productos -->
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/product">
-						<figure class="product-box_image">
-							<img src="/images/products/mishiguene.jpg" alt="chila">
-						</figure>
-						<article class="product-box_data">
-							<h2> Mishiguene</h2>
-							<p>
-								Una experiencia basada en el judaísmo, tanto cultural como gastronómicamente</p>
-							<p>Comentarios: 5</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
+
+			<% for (let i = 8; i < 12; i++) { %> 
+
+				<div class="col-12 col-sm-6 col-lg-3">
+					<section class="product-box">
+						<a href="/product/<%= productos[i].id %> ">
+							<figure class="product-box_image">
+								<img src="<%= productos[i].imagen %>" alt="">
+							</figure>
+							<article class="product-box_data">
+								<h2><%= productos[i].nombre %></h2>
+								<p><%= productos[i].descripcion %></p>
+								<p>Comentarios: 4 </p>
+							</article>
+						</a>
+					</section>
+				</div>
+	
+				<% } %> 
+
+		<!--<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
@@ -72,35 +79,12 @@
 						</article>
 					</a>
 				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/product">
-						<figure class="product-box_image">
-							<img src="/images/products/donjulio.jpg" alt="don julio">
-						</figure>
-						<article class="product-box_data">
-							<h2>Don Julio</h2>
-							<p> Parrilla palermitana, en boca de todos</p>
-							<p>Comentarios: 22</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/product">
-						<figure class="product-box_image">
-							<img src="/images/products/mudra.jpg" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Mudra</h2>
-							<p> Cocina vegana para degustar todo tipo de platos</p>
-							<p>Comentarios: 41</p>
-						</article>
-					</a>
-				</section>
-			</div>
+			</div>-->
+		
+			
+
+
+			
 			
 			
 			
