--- a/public/css/app.css
+++ b/public/css/app.css
@@ -239,6 +239,10 @@ color:white;
   border: 0px;
   cursor: pointer;
   font-size: 1em;
+  font-family: 'Poppins', sans-serif;
+  width: 220px;
+  padding: unset;
+
  
 }
 
@@ -252,8 +256,8 @@ color:white;
   padding: 5px 0;
   border-bottom: solid 1px var(--gray);
   font-size: 20px;
+  font-family: 'Poppins', sans-serif;
 }
-
 
 
 
