--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -57,12 +57,10 @@
 					</li>
 					<li>
 						<form action="" method="post">
-						
-						<button class="logout" type="submit">
 							<a href="/" >
-								Cerrar sesión <i class="fas fa-sign-in-alt"></i>
-							</a>
-						</button>
+							<button class="logout" type="submit">
+								Cerrar sesión </a><i class="fas fa-sign-in-alt"></i> 
+							</button>	</a>
 						</form>
 					</li>
 					<!-- Solo deslogueado <li>
