--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -57,10 +57,11 @@
 					</li>
 					<li>
 						<form action="" method="post">
-							<a href="/" >
-							<button class="logout" type="submit">
-								Cerrar sesión </a><i class="fas fa-sign-in-alt"></i> 
-							</button>	</a>
+						
+							<button class="logout" type="submit">	<a href="/" >
+							Cerrar sesión <i class="fas fa-sign-in-alt"></i> 
+						</a>
+							</button>	 
 						</form>
 					</li>
 					<!-- Solo deslogueado <li>
