--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -14,15 +14,36 @@
 	<!-- Novedades -->
 	<div class="container products-wrapper">
 		<div class="row">
-			<div class="col-12">
-				<h2 class="products-title">Resultados de búsqueda</h2>
-			</div>
+			
 			<!-- Show the "ultimos" products -->
-			<h2 class="col-12"> <i>///////////////////////////////////////// <br> Acá van los resultados de búsqueda. <br>
-			Eliminen estás líneas y cosntruyan la página de resultados de búsqueda. <br>
-			////////////////
-			</h2>
 
+			<% if (results == undefined || results == 0) {%>
+				<p class="resultados">No se han encontrado resultados</p>
+
+				<% }%>
+			<% results.forEach(productos => { %> 
+				<div class="col-12">
+					<h2 class="products-title">Resultados de búsqueda</h2>
+				</div>
+
+				<div class="col-12 col-sm-6 col-lg-3">
+					<section class="product-box">
+						<a href="/product/<%= productos.id %> ">
+							<figure class="product-box_image">
+								<img src="<%= productos.imagen %>" alt="">
+							</figure>
+							<article class="product-box_data">
+								<h2><%= productos.nombre %></h2>
+								<p><%= productos.descripcion %></p>
+								<p>Comentarios: 4 </p>
+							</article>
+						</a>
+					</section>
+				</div>
+	
+				<% }) %> 
+
+		
 
 	<!-- footer -->
 	<%-include("./partials/footer.ejs")%>
