--- a/public/css/app.css
+++ b/public/css/app.css
@@ -186,6 +186,7 @@ hr {
   padding-left: 12px;
   padding-right: unset;
   padding-bottom: 4px;
+  padding-top: 2px;
   text-align: center;
   background-color: var(--yellow);
 }
@@ -590,6 +591,7 @@ margin-right: 0px;
 }
 
 /*====== Formularios ======*/
+
 .form-label {
   display: inline-block;
   font-size: 1.6em;
@@ -885,7 +887,7 @@ max-width: 70px;
 }
 .sexo-eleccion{
   display: grid;
-  grid-template-columns: 2% 45% 2% 45%;
+  grid-template-columns: 45% 45%;
   padding-top: 5px;
   justify-content: space-around;
   
