--- a/views/register.ejs
+++ b/views/register.ejs
@@ -33,23 +33,19 @@
 						 <input class="form-input" type="text" id="apellido" placeholder="Apellido"name="user_apellido">
 					 </li>
 					
-					<div class="sexo-entero">
-					
-						<div><label class="form-label" for="sexo">Sexo</label> <br/></div>
-						<div class="sexo-eleccion">
+					<li class="sexo-entero">
+						<select class="form-input" name="sexo">
 
-							<div class="seleccionador-sexo">
-								<input class="imputradio"  type="radio" id="sexo" name="user_sexo" value="masculino" > <p class="radio">Masculino</p> 
-							</div>
+							<option>Sexo</option>
 							
-				
-							<div class="seleccionador-sexo">
-								<input  class="imputradio" type="radio" id="sexo" name="user_sexo" value="femenino"><p class="radio">Femenino</p> 
-							 </div>
-						 	
-					
-						</div>
-					</div>
+							<option>Femenino</option>
+							<option>Masculino</option>
+							
+							<option>Prefiero no decrilo</option>
+							
+							</select>
+						
+						</li>
 				
 					
 	
