--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -14,12 +14,12 @@
 	<section class="info-usuario container products-wrapper">
 		<div class="row">
 			<div class="img-container offset-3 col-2">
-				<img src="/images/usuario.png" alt="foto de perfil" class="foto-perfil">
+				<img src="/images/cala" alt="foto de perfil" class="foto-perfil">
 			</div>
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
 
-					<h1 class="main-title"> Federico Roca</h1>
+					<h1 class="main-title"> Cala Ruggeri</h1>
 		
 					<a href='/allProducts/:id' class="btn mt-3 ml-4" href="">SEGUIR</a>
 					
