--- a/views/product-add.ejs
+++ b/views/product-add.ejs
@@ -17,35 +17,31 @@
 			<div class="col-12">
 				<h2 class="products-title">Agregar un producto</h2>
 			</div>
-			<!-- Show t
+			
 	<div class="form-registracion">
 		<h2 class="col-12"> 
 			<form class="tablaRegistracion">
 			<ul class= "registracionItems">
 			  <li class="bordearDiferente"> 
-				<!<label class="form-label" for="nombre">Nombre:</label> -->
+				
 				<input class="form-input" type="text" id="nombre" placeholder="Nombre del producto"name="user_nombre">
 			   
 			 </li>
 			
-				<!-- <label class="form-label" for="apellido">Apellido:</label>-->
 				 
-			
-			
 
-			 <li class="bordearDiferente">
-				<label class="añadir-foto" for="mail">Foto del producto:</label>
-
-				
-	 <input class="add" type="image" placeholder="Foto del producto" name="foto">
+			 <li class="bordear">
+				<form name="subida-imagenes" type="POST" enctype="multipart/formdata" >
+					<input class="form-input" type="file" name="imagen1" />
+				</form>
 			 </li>
 			 
 			 <li class="bordear">
 				<!-- <label class="form-label" for="contraseña">Contraseña:</label>-->
 				
-				 <input class="add" type="password" id="descipcion"placeholder="Descripcion del producto" name="user_contraseña">
+				 <input class="form-input" type="mail" id="descipcion"placeholder="Descripcion del producto" name="user_contraseña">
 			 </li>
-			 <a class="actualizar-perfil" href="/product">Añadir producto</a>
+			 <a class="actualizar-perfil" href="/allProducts/:id">Añadir producto</a>
 		   </ul>
 		  </form>
 		</h2>
