--- a/views/profile-edit.ejs
+++ b/views/profile-edit.ejs
@@ -35,19 +35,18 @@
 					
 					 
 					 <li class="sexo-entero">
-						<div><label class="form-label" for="sexo">Sexo</label> <br/></div>
-						<div class="sexo-eleccion">
+						<select class="form-input" name="sexo">
 
-							<div class="seleccionador-sexo"><input class="imputradio"  type="radio" id="sexo" name="user_sexo" value="masculino" > </div>
+							<option>Sexo</option>
 							
-							<div><p class="radio">Masculino</p> </div>
+							<option>Femenino</option>
+							<option>Masculino</option>
 							
-							<div class="seleccionador-sexo"><input  class="imputradio" type="radio" id="sexo" name="user_sexo" value="femenino"></div>
-						 	
-							<div><p class="radio">Femenino</p> </div>
-						</div>
+							<option>Prefiero no decrilo</option>
+							
+							</select>
 						
-					 </li>
+						</li>
 					
 	
 					 <li class="bordearArriba">
@@ -61,7 +60,7 @@
 					 </li>
 	
 				
-					<a class="actualizar" href="/profile">Actualizar mi perfil</a>
+					<a class="actualizar-perfil" href="/profile">Actualizar mi perfil</a>
 					
 	
 				   </ul>
