--- a/views/product.ejs
+++ b/views/product.ejs
@@ -54,8 +54,9 @@
 					</section>
 					<form class="form" action="" method="POST">
 						<input class="form-input" type="text" value="" placeholder="Agregar comentario">
-						<button type="submit" class="buy-now-button">AGREGAR COMENTARIO</button>
+						
 					</form>
+					<button class="actualizar-perfil"type="submit" class="buy-now-button"><a href="/register"> AGREGAR COMENTARIO</a> </button>
 					<hr>
 				</div>
 			</div>
