--- a/views/product.ejs
+++ b/views/product.ejs
@@ -21,7 +21,7 @@
 			<h2 class="products-title">
 				<%= productos[idSearch-1].nombre %></h2> 
 			<p class="product-detail-description">
-				<a href="/add">Agregar Producto</a>
+				<a href="/register">Agregar Producto</a>
 			</p>
 		</div>
 
