cambios en novedades

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,7 +59,7 @@
 						</figure>
 						<article class="product-box_data">
 							<h2>¡cupon de $2000 de navidad!</h2>
-							<p>¡Registrate y te regalamos un cupon de $2000 para que uses en el restaurante que quieras!.</p>
+							<p>¡Registrate y te regalamos un cupon navideño de $2000!</p>
 						
 						</article>
 					<!--</a>-->
@@ -73,7 +73,7 @@
 						</figure>
 						<article class="product-box_data">
 							<h2 class="product-box-nombre">conoce la nueva sucursal!</h2>
-							<p>No te pierdas de conocer la nueva sucursal de este increible restaurante ubicado en Palermo.</p>
+							<p>No te pierdas de conocer la nueva increible sucursal de Don Julio. </p>
 						
 						</article>
 					<!--</a>-->
