--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,15 +3,16 @@
 
 <!-- Include Head -->
 <%-include("./partials/head.ejs")%>
+<!-- Header -->
+<%-include("./partials/headerLogueado.ejs")%>
+<!-- /Header -->
 
 <body>
 
-	<!-- Header -->
-	<%-include("./partials/headerLogueado.ejs")%>
-	<!-- /Header -->
+	
 
 	<!-- Datos del usuario -->
-	<section class="info-usuario container products-wrapper">
+	<section class="info-usuario container ">
 		<div class="row">
 			<div class="img-container offset-3 col-2">
 				<img src="/images/cala-perfil.jpg" alt="foto de perfil" class="foto-perfil">
