--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,13 +3,13 @@
 
 <!-- Include Head -->
 <%-include("./partials/head.ejs")%>
-
+<!-- Header -->
+<%-include("./partials/header.ejs")%> 
+	<!-- /Header -->
 
 <body>
 
-	<!-- Header -->
-	<%-include("./partials/header.ejs")%>
-	<!-- /Header -->
+	
 
 	<!-- Novedades -->
 	
@@ -41,7 +41,7 @@
 							<option>Femenino</option>
 							<option>Masculino</option>
 							
-							<option>Prefiero no decrilo</option>
+							<option>Prefiero no decirlo</option>
 							
 							</select>
 						
@@ -71,6 +71,6 @@
 	<footer class="main-footer">
 		<%-include("./partials/footer.ejs")%>
 	<!-- /footer --> 
-</body> -->
+</body> 
 
 </html>
