--- a/views/allproducts.ejs
+++ b/views/allproducts.ejs
@@ -28,7 +28,7 @@
 				<section class="product-box">
 					<a href="/product/<%= productos[i].id %> ">
 						<figure class="product-box_image">
-							<img src="<%= productos[i].imagen %>" alt="">
+							<img src="<%= productos[i].image %>" alt="">
 						</figure>
 						<article class="product-box_data">
 							<h2><%= productos[i].nombre %></h2>
