--- a/views/product-add.ejs
+++ b/views/product-add.ejs
@@ -23,17 +23,20 @@
 		<form class="tablaRegistracion" action="/add" method="post">
 			<ul class= "registracionItems">
 			  <li class="bordearDiferente"> 
-				<input class="form-input" type="text" id="nombre" placeholder="Nombre del producto"name="user_nombre">
+				<input class="form-input" type="text" id="nombre" placeholder="Nombre del producto"name="nombre">
 			 </li>
 			
 				 
 			 <li class="bordear">
-					<input class="form-input" type="file" name="imagen1" />
+					<input class="form-input" type="file" name="image" />
 			 </li>
 			 
 			 <li class="bordear">
 				 <input class="form-input" type="text" placeholder="Descripcion del producto" name="descripcion">
 			 </li>
+			 <li class="bordear">
+				<input class="form-input" type="date" placeholder="fecha de creacion" name="fecha">
+			</li>
 			 <li class="bordear">
 				<input class="actualizar-perfil" type="submit" placeholder="Añadir producto">
 			</li>
