cambio de archivos mini

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -34,8 +34,8 @@
 
 				<div class="col-12 col-lg-4">
 					<section class="comments">
-     
-				<!--for (let i = 0; i < productos.comentarios.length; i++ ) -->
+      
+				<%for (let i = 0; i < productos.comentarios.length; i++ ) { %>
 					<% comentarios.forEach(comentario=> { %> 
 						<article>
 							<div class="icono-usuario-comentario">
@@ -49,7 +49,7 @@
 							</div>
 						</article>
 						<% } %> 
-
+<!--CORREGIR ESTO PAR que anden el detalle con los comentarios etc -->
 					
 
 					</section>
