--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="/css/app.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@500&family=Karantina&family=Open+Sans+Condensed:ital,wght@1,300&display=swap" rel="stylesheet">
- 
+<link rel="shortcut icon" type="image/jpg" href="/favicon.jpg"/>
  
 </head>
 <!--FIJARSE SI ESTAN BIEN LOS HIPERVINCULOS, O SI TIENE QUE IR DIRECTO /CSS O /IMAGES POR SER UN RECURSO ESTATICO -->
