inetento de que ande el login, cambie session

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,16 +24,11 @@
 					<ul class= "registracionItems">
 
 					  <li class="bordearDiferente"> 
-						<input class="form-input" type="nombre" id="nombre" placeholder="nombre" name="nombre">
-					 </li>
-
-					 <li class="bordear"> 
-					
-						<input class="form-input" type="apellido" id="apellido" placeholder="apellido" name="apellido">
+						<input class="form-input" type="text" id="mail" placeholder="Correo Electronico" name="mail">
 					 </li>
 
 					 <li class="bordear">
-						 <input class="form-input" type="contraseña" id="contraseña" placeholder="Contraseña"name="contrseña">
+						 <input class="form-input" type="password" id="contraseña" placeholder="Contraseña"name="contrseña">
 					 </li>
 
 					 <br>
