--- a/views/register.ejs
+++ b/views/register.ejs
@@ -51,7 +51,7 @@
 					 </li>
 					 <li class="bordear">
 						<!-- <label class="form-label" for="contraseña">Contraseña:</label>-->
-						 <input class="form-input" type="contraseña" id="contraseña"placeholder="Contraseña" name="contraseña">
+						 <input class="form-input" type="password" id="contraseña"placeholder="Contraseña" name="contraseña">
 					 </li>
 	
 
