--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -56,9 +56,9 @@
 						</a>
 					</li>
 					<li>
-						<form action="" method="post">
+						<form action="/logout" method="post">
 						
-							<button class="logout" type="submit">	<a href="/" >
+							<button class="logout" type="submit">
 							Cerrar sesión <i class="fas fa-sign-in-alt"></i> 
 						</a>
 							</button>	 
