--- a/views/index.ejs
+++ b/views/index.ejs
@@ -91,17 +91,17 @@
 			</div>
 			<!-- Show the "ultimos" products -->
 
-			<% for (let i = 0; i < 4; i++) { %> 
+			<% for (let i = 0; i < productos.length; i++) { %> 
 
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="/product/<%= productos[i].id %> ">
+					<a href="/product/<%= productos.id %> ">
 						<figure class="product-box_image">
-							<img src="<%= productos[i].imagen %>" alt="">
+							<img src="<%= productos.image %>" alt="">
 						</figure>
 						<article class="product-box_data">
-							<h2><%= productos[i].nombre %></h2>
-							<p><%= productos[i].descripcion %></p>
+							<h2><%= productos.nombre %></h2>
+							<p><%= productos.descripcion %></p>
 							<p>Comentarios: 4 </p>
 						</article>
 					</a>
