--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,7 +4,7 @@
 <!-- Include Head -->
 <%-include("./partials/head.ejs")%>
 <!-- Header -->
-<%-include("./partials/headerLogueado.ejs")%>
+<%-include("./partials/header.ejs")%>
 <!-- /Header -->
 
 <body>
