--- a/views/product-add.ejs
+++ b/views/product-add.ejs
@@ -7,7 +7,7 @@
 <body>
 
 	<!-- Header -->
-	<%-include("./partials/headerlogueado.ejs")%>
+	<%-include("./partials/header.ejs")%>
 	<!-- /Header -->
 
 
