--- a/views/profile-edit.ejs
+++ b/views/profile-edit.ejs
@@ -8,7 +8,7 @@
 <body>
 
 	<!-- Header -->
-	<%-include("./partials/headerLogueado.ejs")%>
+	<%-include("./partials/header.ejs")%>
 	<!-- /Header -->
 
 	<!-- Novedades -->
