--- a/views/register.ejs
+++ b/views/register.ejs
@@ -51,7 +51,7 @@
 					 </li>
 					 <li class="bordear">
 						<!-- <label class="form-label" for="contraseña">Contraseña:</label>-->
-						 <input class="form-input" type="image" id="image" placeholder="Imagen" name="image">
+						 <input class="form-input" type="file" id="image" placeholder="Imagen" name="image">
 					 </li>
 					 <li class="bordear">
 						<!-- <label class="form-label" for="contraseña">Contraseña:</label>-->
