resuelto el login

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,7 +28,7 @@
 					 </li>
 
 					 <li class="bordear">
-						 <input class="form-input" type="password" id="contraseña" placeholder="Contraseña"name="contrseña">
+						 <input class="form-input" type="password" id="contraseña" placeholder="Contraseña"name="contrasenia">
 					 </li>
 
 					 <br>
