--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 
 <header class="main-header">
-    <% if (! logueado) { %> 
+    <% if (! locals.logueado) { %> 
     <div class="container">
         <div class="row align-items-center">
             <div class="col-5 col-md-2">
