--- a/views/register.ejs
+++ b/views/register.ejs
@@ -21,7 +21,7 @@
 			<!-- Show the "ultimos" products -->
 			<div class="form-registracion">
 				<h2 class="col-12"> 
-					<form class="tablaRegistracion" action="/register" method="POST" >
+					<form class="tablaRegistracion" action="/register" method="POST" enctype="multipart/form-data" > 
 					<ul class= "registracionItems">
 					  
 						<li class="bordearDiferente"> 
@@ -31,7 +31,7 @@
 					 </li>
 					 <li class="bordear">
 						<!-- <label class="form-label" for="apellido">Apellido:</label>-->
-						 <input class="form-input" type="apllido" id="apellido" placeholder="Apellido"name="apellido">
+						 <input class="form-input" type="apellido" id="apellido" placeholder="Apellido"name="apellido">
 					 </li>
 					
 					
