--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -84,7 +84,7 @@
 	
 			<nav class="main-navbar">
 				<ul class="left-navbar2">
-					<li class="log"><a href="/">Restaurantes</a></li>
+					<li class="log"><a href="/allProducts">Restaurantes</a></li>
 					<li class="log"><a href="/add">Añadir restaurante</a></li>
 				</ul>
 	
