--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -94,9 +94,9 @@
 						</a>
 					</li>
 					<li>
-						<form action="/logout" method="post">
+						<form action="/logout">
 						
-							<button class="logout" type="submit">
+							<button class="logout" type="submit" value="Exit">
 							Cerrar sesión <i class="fas fa-sign-in-alt"></i> 
 						</a>
 							</button>	 
